--- a/CHANGES
+++ b/CHANGES
@@ -17,10 +17,12 @@ listing of all changes made to the code.
     snmpd:
       - [PATCH 2941811]: Handle successful requests with reqID 0
       - [PATCH 3096725]: sysORTable registation for notification log mib
+      - [PATCH 3479740]: Fix hrSWRunPerf statistics
       - [PATCH 3487867]: Don't skip missing ifXTable entries (ifConnectorPresent FALSE)
       - [PATCH 3487919]: Fix compilation when caching is disabled
       - [PATCH 3495697]: Store persistent snmpTarget table changes
       - [BUG 3526549]: CVE-2012-2141 Array index error leading to crash
+      - [BUG 3532090]: Fix high ifIndex values crashing hrDeviceDescr
       - Added OCFS2 (Oracle Cluster FS) to hrStorageTable and hrFSTable
       - Eliminate assorted dead variables
       - UDP-MIB: Report proper udpLocalAddress (instead of 0.0.0.0)
