--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,354 @@ that have been applied in released versions.  Please see the NEWS file for
 a summary of the major changes, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.7.2*
+
+    snmplib:
+      - Add Doxygen-style function header for
+	netsnmp_register_default_target() and
+	netsnmp_clear_default_target().
+      - Avoid that system clock changes (e.g. by ntpd) affect code that
+	needs relative time Make sure that the range of the SNMPv3 variable
+	snmpEngineTime is 0..2147483647 on all supported systems instead of
+	0..42949672 on some systems (i.e. wraparound after 497 days) Add
+	netsnmp_get_monotonic_clock(), netsnmp_set_monotonic_marker(),
+	netsnmp_ready_monotonic(), netsnmp_get_agent_runtime()
+      - Avoid that system clock changes (e.g. by ntpd) affect code that
+	needs relative time Make sure that the range of the SNMPv3 variable
+	snmpEngineTime is 0..2147483647 on all supported systems instead of
+	0..42949672 on some systems (i.e. wraparound after 497 days) Add
+	netsnmp_get_monotonic_clock(), netsnmp_set_monotonic_marker(),
+	netsnmp_ready_monotonic(), netsnmp_get_agent_runtime() Deprecate
+	atime_diff(), atime_newMarker(), atime_ready(), atime_setMarker(),
+	marker_tticks(), netsnmp_marker_uptime(), netsnmp_timeval_uptime(),
+	timeval_tticks(), uatime_diff(), uatime_hdiff() and uatime_ready().
+      - Avoid waiting indefinitely if a session has timeout zero
+      - Declare "type" argument of se_store_list() / se_store_slist() /
+	se_store_enum_list() const
+      - Make it explicit that MAX_SUBID is an unsigned constant
+      - Make netsnmp_callback_accept() return -1 (failure) instead of 0
+	(STDIN_FILENO)
+      - Make netsnmp_large_fd_set_resize() robust against memory allocation
+	failures. Make NETSNMP_LARGE_FD_ZERO() use memset() on Unix systems
+	instead of an explicit loop.
+      - Make netsnmp_large_fd_set_resize() robust against memory allocation
+	failures. Make NETSNMP_LARGE_FD_ZERO() use memset() on Unix systems
+	instead of an explicit loop. Make sure that on Unix systems
+	netsnmp_large_fd_clr() doesn't try to read memory it isn't allowed
+	to read if the first argument equals -1 (a value that shouldn't be
+	passed by the caller).
+      - Merge together the Linux and *BSD version of src port sending.
+      - Only transform the address to printable form when needed.
+      - PATCH 3510454: Allow the use of 0.0.0.0/0 as alias for default
+      - Prevent gcc ped-warning for NETSNMP_REMOVE_CONST git-svn-id:
+	file:///home/hardaker/lib/sf-bkups/net-snmp-convert-svnrepo/trunk@1
+	8052 06827809-a52a-0410-b366-d66718629ded
+      - Reduce overhead of config file parsing
+      - Remove obsolete snmp_get_fd_for_session() declaration
+      - Separate out the cmesg buffer size
+      - Set the rpath for libperl.so in libnetsnmpmibs.so such that the
+	dynamic linker can find libperl.so without requiring the user to
+	modify the dynamic linker settings. This change in
+	agent/Makefile.in is necessary on the 5.5 branch and later but not
+	on the 5.4 branch. That is because the 5.4 branch uses an older
+	version of libtool that propagates the rpath of dependent
+	libraries. This is called inter-library dependency tracking in the
+	libtool manual. This functionality is present in libtool version 1
+	but not in libtool version 2. For more background information about
+	dynamic libraries and rpaths, see also the document with the title
+	"RpathIssue" on the Debian wiki
+	(http://wiki.debian.org/RpathIssue).
+      - Simplify implementation of functions manipulating 64-bit numbers.
+      - Simplify the se_store_enum_list() implementation
+      - Use SNMP_ALLOC_TYPEDEF to allocate transports in order to avoid the
+	separate call to memset.
+      - [PATCH 3414773]: Encode integer value using ASN_INTEGER
+      - [PATCH 3526599]: Don't hang on retried failing SNMPv3 responses
+
+    snmplib + snmpd + snmpwalk:
+      - Avoid that system clock changes (e.g. by ntpd) affect code that
+	needs relative time
+
+    snmplib, snmpd, perl:
+      - Eliminate dead variables agent/mibgroup/agentx/master_admin.c
+	agent/mibgroup/etherlike-mib/data_access/dot3stats_linux.c
+	agent/mibgroup/etherlike-mib/dot3StatsTable/dot3StatsTable_data_acc
+	ess.c agent/mibgroup/host/data_access/swinst_pkginfo.c
+	agent/mibgroup/host/data_access/swrun_procfs_status.c
+	agent/mibgroup/ip-mib/data_access/systemstats_linux.c
+	agent/mibgroup/mibII/kernel_linux.c
+	agent/mibgroup/rmon-mib/data_access/etherstats_linux.c
+	agent/mibgroup/rmon-mib/etherStatsTable/etherStatsTable_data_access
+	.c apps/snmptls.c apps/snmptrapd_log.c snmplib/dir_utils.c
+	snmplib/snmp_client.c snmplib/snmp_openssl.c
+	snmplib/transports/snmpTLSTCPDomain.c
+
+    snmp:
+      - Bridge-mib: Fix index interpretation. This patch corrects a wrong
+	data interpretation. snmp-bridge-mib obtains the ifindex value from
+	the sysfs attribute 'ifindex' The value given by the sysfs
+	attribute is an integer, which is handled as hex and leads to
+	incorrect data displayed to the user. e.g. $ > snmpwalk localhost
+	BRIDGE-MIB::dot1dBasePortIfIndex.2
+	BRIDGE-MIB::dot1dBasePortIfIndex.2 = INTEGER: 54 according to the
+	sysfs attribute the value is 36 $ > cat
+	/sys/class/net/<device>/ifindex 36 Signed-off-by: Mijo Safradin
+	<safradin@linux.vnet.ibm.com>
+
+    snmpd:
+      - Add missing debug tag
+      - Add netsnmp_get_next_alarm_time()
+      - Avoid that netsnmp_register_old_api() failure triggers a double
+	free. Fixes a regression introduced via commit
+	aa4d47c2609e52818c9cdf1a8e2205de9a335a0a (svn r19515).
+      - Avoid that snmpd crashes if started on a system with another
+	OpenSSL library version than the one it has been built with.
+      - Avoid that system clock changes (e.g. by ntpd) affect code that
+	needs relative time Make sure that the range of the SNMPv3 variable
+	snmpEngineTime is 0..2147483647 on all supported systems instead of
+	0..42949672 on some systems (i.e. wraparound after 497 days)
+      - BUG: 3408398: Fix a memory leak in agent/mibgroup/hardware/fsys.
+	This memory leak was introduced via commit
+	9bf3d96d96a8ecd4a5fc35c326dc937467002b6c: Initial HAL
+	implementation of FileSystem information (March 7, 2008).
+      - BUG: 3439234: Correct the dependencies of ucd-snmp/pass and
+	ucd-snmp/pass_persist
+      - BUG: 3439234: Move netsnmp_pass_str_to_errno to pass_common and
+	rename it to netsnmp_internal_pass_str_to_errno
+      - BUG: 3463767: Handle parsing subidentifiers > 2^31
+      - Call snmp_oidtree_compare instead of snmp_oid_min_compare
+      - DISMAN-PING-MIB: Avoid dangling pointers (based on patch 3503259)
+      - DISMAN-PING-MIB: Avoid reading freed memory when deleting a row
+	from a table
+      - DISMAN-PING-MIB: Do not send the contents of the stack over the
+	network
+      - DISMAN-PING-MIB: Don't call exit() upon memory allocation failure
+      - DISMAN-PING-MIB: Fix IPv6 socket leak in error paths
+      - DISMAN-PING-MIB: Fix a socket leak triggered by pinging a remote
+	host
+      - DISMAN-PING-MIB: Fix more memory leaks
+      - DISMAN-PING-MIB: Fix several memory leaks
+      - DISMAN-PING-MIB: Make ping implementation independent of ntpd clock
+	jumps
+      - DISMAN-PING-MIB: Make pinging local interface addresses work
+      - DISMAN-SCHEDULER-MIB: Handle 32-character schedContextName values
+	correctly. See also commit
+	b3c4982542e0ab151fb3884754cdfbcb472da52d.
+      - Disable the support for integer64 in pass scripts if compiling
+	without opaque-special-types.
+      - Factor out asc2bin and bin2asc. Add a netsnmp_internal_ prefix to
+	them
+      - Fixed UCD-SNMP-MIB::systemStats after 30 days of uptime. After 30
+	days, values from /proc/stat (on Linux) can get bigger than 32bits
+	and snmpd calculations might render counters like ssCpuUser
+	negative or zero, while the real value is higher. Therefore the
+	counters should be tracked as the largest integer available.
+      - Fixed snmpd '-d' option. Now it dumps packets again.
+      - HOST-RESOURCES-MIB::hrStorageTable: fix bug in handling large
+	filesystems, where large means above 8 TB (= 2**31 * 4096 bytes).
+	This patch fixes a bug introduced in commit
+	71d8293f387a6cd66bb0dbb13c0f50174d2e678b. For the original bug
+	report, see also
+	https://sourceforge.net/tracker/?func=detail&atid=112694&aid=341982
+	5&group_id=12694.
+      - IF-MIB::ifType: Report type "infiniband (199)" for InfiniBand
+	interfaces instead of type "other (1)".
+      - Init_agent() + init_kmem(): Return an error value instead of
+	invoking exit() if access to kernel virtual memory is denied
+      - Make the configuration of the dlmod module fail rather than
+	generate a dummy module if the dlopen function isn't available.
+      - Match each getpwnam()/getpwuid() call with an endpwent() call and
+	each getgrent() call with an endgrent() call.
+      - PATCH 3402376: from Leonardo Chiquitto: Recognise ReiserFS Also
+	move various FSType definitions to the appropriate blocks
+      - PATCH 3453868: from "Bill Fenner <fenner@gmail.com>": Factor common
+	code into pass_common Move the code for pormatting and printing
+	values from pass and pass_persist into pass_common.
+      - PATCH: 3487867: Don't skip missing ifXTable entries
+	(ifConnectorPresent FALSE)
+      - Remove spurious #endif that seems to be the result of a mismerge.
+      - Smux: simplify smux_list_detach()
+      - UDP-MIB: Report the proper address in udpLocalAddress instead of
+	0.0.0.0. Makes test T160snmpnetstat pass again. Fixes a bug
+	introduced in commit c76fb96f65e33ba2fd212a921e8c386155ee5c7a.
+      - [BUG 3460364]: Fix use of block factor when detecting error
+	conditions
+      - [BUG 3489631]: Fix incorrect handling of UCD monitoring flag
+      - [PATCH 3410050]: Skip already-'processed' varbinds Based on mib2c
+	patch provided by Stephen Turner
+      - [PATCH 3410059]: Fix sparsely augmenting trigger tables Patch
+	provided by Stephen Turner
+      - [PATCH 3447444]: Fix SIG_PIPE handling Patch provided by Bill
+	Fenner
+      - [PATCH 3447671]: Fix override handling of OID values Patch supplied
+	by Phillip O'Donnell
+      - [PATCH 3487919]: Fix compilation when caching is disabled
+      - [PATCH 3495697]: Store persistent snmpTarget table changes
+
+    snmpdx:
+      - [PATCH 3445437]: Log AgentX disconnections (in line with
+	connections) Patch provided by Bill Fenner
+
+    snmptrapd:
+      - Avoid crash during shutdown due to invoking perl_destruct(NULL)
+      - Do not invoke shutdown_perl() from inside the SIGTERM handler since
+	that fails if SIGTERM is received while a Perl handler is active.
+	Based on a patch posted by Joel Avni <javni@arubanetworks.com>
+      - Eliminate an unused variable (Now)
+      - Move the main loop code into a new function
+      - Remove superfluous casts
+
+    snmptrapd_sql:
+      - Avoid that a linker error is triggered on systems where my_progname
+	is missing in libmysqlclient (e.g. Fedora 15 and 16). This is a
+	backport of commit 9f653f7.
+
+    apps, snmplib:
+      - PATCH: 2835577: identified by "Bart Van Assche": Replace SNMP_ZERO
+	of arrays with a memset. git-svn-id:
+	file:///home/hardaker/lib/sf-bkups/net-snmp-convert-svnrepo/trunk@1
+	7797 06827809-a52a-0410-b366-d66718629ded
+
+    building:
+      - Add dependencies on @FEATURETARGS@ to make the subtarget work as
+	well.
+      - Add missing end comments to feature ifndefs.
+      - Add target to build agentxtrap from the toplevel
+      - Make the transport configuration code work again Previously the
+	transport inheritance processing code ran with
+	NETSNMP_FEATURE_CHECKING set. In this mode the file
+	net-snmp/feature-details.h is requiered. That file is created
+	during the first make run, and that happens after configure is run.
+	Change this to undefine NETSNMP_MINIMAL_CODE, effectively turning
+	off feature support during transport configuration in order to make
+	it work at all.
+      - Micro-optimize agent module dependency analysis This makes the
+	agent module dependency analysis carried out by the configure
+	script slightly faster, especially on those systems where fork() is
+	expensive (Cygwin).
+      - Run libtool --mode=finish on the right directory
+
+    libsnmp:
+      - Changed the type of the fourth argument of netsnmp_set_row_column()
+	from const char* to const void* such that no cast is necessary when
+	passing another datatype then char* or const char*.
+
+    man:
+      - [BUG 3490708]: Clarify use of common command-line options
+
+    pass:
+
+    perl:
+      - Add agent::uptime()
+      - Enable sending SNMPv2 traps with an empty varbind list
+      - Fix spelling in the documentation of the SNMP module
+      - Fixed segmentation fault when handler registration fails. When
+	netsnmp_register_handler fails, it frees its reginfo ->
+	nsahr_DESTROY (and any other function) must not dereference it.
+
+    python:
+      - Avoid that an SNMP set with UseEnums enabled causes a segmentation
+	fault
+      - [PATCH 3433846]: Fix for use with python 2.4
+
+    testing:
+      - Add a test for se_store_list()
+      - Add testing/fulltests/default/T154dismanpingmib_simple
+      - Avoid false negative for T114agentxagentxtrap_simple caused by the
+	test result being present in the hex dump ("mostly_harmless")
+      - Convert snmplib/test_binary_array.c into two unit tests
+      - Make ISDEFINED() check for an exact match instead of a prefix match
+      - Make the asn1 test pass even if support for opaque types are
+	removed.
+      - Protect the use of $OSTYPE to ensure that 'test' get enough
+	parameters.
+      - Remove an incorrect comment from simple_eval_tools.sh
+      - Remove unused variable
+      - Require a semicolon after OK(), OKF() and PLAN() Also, let OKF()
+	emit a single line of output such that all output it produces is
+	visible in the output of "make test".
+      - [BUG 3474590]: Don't match underscores within the source root
+	filename
+
+    unspecified:
+      - Added OCFS2 (Oracle Cluster FS) to hrStorageTable and hrFSTable
+      - [BUG 3444939]: BUG: 1796886: snmplib: Avoid that
+	sprint_realloc_octet_string() embeds unprintable control characters
+	or binary zeroes in its output. This behavior could cause truncated
+	output in snmptrapd.
+      - [BUG 3452069]: Fix snmptrap_oid declaration in mib2c generated code
+	This bug was introduced considerable time ago. It did already exist
+	at the time the 5.6 branch was created (see also commit
+	0ec088afa27cfda4e6ea78aae7cfc5507564edde).
+      - [BUG 3454168]: configure: Fix building with --enable-read-only
+      - [PATCH 3418649]: HOST-RESOURCES-MIB: Use pclose() instead of
+	fclose() to close a pipe.
+
+    Bug 3152841:
+      - Do not install the util_funcs subheaders that were removed in 5.7
+      - Install util_funcs subheaders
+      - Install util_funcs subheaders introduced in 5.6
+
+    Cygwin:
+      - Make date_n_time() produce time zone information
+
+    Cywin:
+      - Agent: Implement get_uptime() such that querying
+	HOST-RESOURCES-MIB::hrSystemUptime returns a non-zero value.
+
+    FreeBSD:
+      - Restore IP_RECVDSTADDR functionality.
+      - Snmpd + apps: Sending UDP packets works again for non-root users
+      - [PATCH 3489387]: Install FreeBSD 10 header file (plus other missing
+	versions)
+
+    Linux:
+      - PATCH: 3525998: Don't use an uninitialised value in error message
+
+    MinGW:
+      - Support the directory structure of recent Shining Light OpenSSL
+	binary distributions
+      - Testing: Fix a race condition in the test framework
+      - Testing: Fix a race condition in the test runner
+      - Testing: Make test T130snmpv1vacmget_simple pass
+      - Testing: Make those regression tests pass for which SNMPCONFPATH
+	and/or SNMP_PERSISTENT_DIR matter
+      - Testing: Make unit-tests/T014gethostbyaddr_clib pass
+      - Testing: Make unit-tests/T102pdu_build_clib pass.
+      - Testing: Obtain the MSYS path from the environment
+
+    Win32:
+      - Avoid that compiling the header file <net-snmp/net-snmp-config.h>
+	with the MinGW gcc compiler triggers warnings about "pragma
+	comment".
+      - Avoid that the PACKAGE_* macros defined in
+	<net-snmp/net-snmp-config.h> cause trouble when including this
+	header in a package that uses the GNU autotools.
+      - Building: Builds now correctly with a 64-bit compiler. git-svn-id:
+	file:///home/hardaker/lib/sf-bkups/net-snmp-convert-svnrepo/trunk@1
+	9458 06827809-a52a-0410-b366-d66718629ded
+      - Snmpd: Remove dlmod
+
+    Windows:
+      - MSVC: Avoid that the typedefs in <net-snmp/net-snmp-config.h>
+	conflict with those in <stdint.h> from the msinttypes project
+      - MSVC: Link with proper libeay32 library
+      - MSVC: When linking with OpenSSL, link with user32.lib too
+      - Make netsnmp_large_fd_set_resize() robust against memory allocation
+	failures. Make NETSNMP_LARGE_FD_ZERO() use memset() on Unix systems
+	instead of an explicit loop. Make sure that on Unix systems
+	netsnmp_large_fd_clr() doesn't try to read memory it isn't allowed
+	to read if the first argument equals -1 (a value that shouldn't be
+	passed by the caller). Make netsnmp_large_fd_is_set() return false
+	on Unix systems if the first argument equals -1 (a value that
+	shouldn't be passed by the caller). Make
+	netsnmp_large_fd_set_resize() shrink behavior correct.
+      - Remove superfluous link libraries from project files (*.dsp)
+      - Testing: perl: Fix an incorrect message printed while running the
+	Perl module regression tests
+
+
+
 *5.7.1*
 
     snmplib:
