--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,18 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.7.2*
+    snmp:
+      - BUG: 3526549: CVE-2012-2141 Array index error leading to crash
+
+    building:
+      - PATCH: 2091156: correctly declare dependencies in Makefile. 'make
+        -j <N>' should work now. Backport this to V5-4 as it is needed for
+        correct operation in the single threaded case of make miblib as
+        well.
+
+    Many other miscellaneous minor bug fixes
+
 *5.7.1*
 
   libnetsnmp:
