--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ listing of all changes made to the code.
     snmp:
       - BUG: 3526549: CVE-2012-2141 Array index error leading to crash
 
+    snmpd:
+      - BUG: 3532090: Fix high ifIndex values crashing hrDeviceDescr
+
     building:
       - PATCH: 2091156: correctly declare dependencies in Makefile. 'make
         -j <N>' should work now. Backport this to V5-4 as it is needed for
