CHANGES: snmplib: Rename memdup() into netsnmp_memdup()
Rename the function memdup() defined in libnetsnmp.so into
netsnmp_memdup(). This avoids conflicts with memdup() functions
defined in other libraries that define a function with the same
name. As an example, if WINS name resolution has been enabled via
/etc/nsswitch.conf then performing a host name lookup can trigger
a crash in the SAMBA WINS name lookup library because calls to
memdup() from that library get redirected to the incompatible
Net-SNMP memdup() function. See also
https://bugzilla.redhat.com/show_bug.cgi?id=1000780 for the details.
This patch intentionally changes the Net-SNMP ABI.

--- a/man/netsnmp_util.3
+++ b/man/netsnmp_util.3
@@ -387,7 +387,7 @@ Definition at line 208 of file tools.c.
 Return the number of timeTicks since the given marker. 
 .PP
 Definition at line 901 of file tools.c.
-.SS "int memdup (u_char ** to, const u_char * from, size_t size)"
+.SS "void * netsnmp_memdup (const void * from, size_t size)"
 .PP
 Duplicates a memory block. Copies a existing memory location from a pointer to another, newly malloced, pointer.
 .PP
