Add a couple of contributors to README

--- a/README
+++ b/README
@@ -352,6 +352,8 @@ THANKS
     Anders Persson <apersson@users.sourceforge.net>
     Rojer <rojer@users.sourceforge.net>
     Bart Van Assche <bart.vanassche@gmail.com>
+    Pablo Carboni <pcarboni@users.sourceforge.net>
+    Bill Fenner <fenner@gmail.com>
 
   We've probably forgotten people on this list.  Let us know if you've
   contributed code and we've left you out.
