--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,13 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.7.2.1*
+    snmpd:
+      - SECURITY: a denial of service attack vector was discovered on
+        the linux implementation of the ICMP-MIB.  This release fixes
+        this bug and all users are encouraged to update their SNMP
+        agent if they make use of the ICMP-MIB table objects.
+
 *5.7.2*
     snmp:
       - BUG: 3526549: CVE-2012-2141 Array index error leading to crash
