Fix detection of sha224 and sha384, patch from Brian Sipos
https://sourceforge.net/p/net-snmp/bugs/2564/

Luckily nobody's needed to build using an OpenSSL version
that doesn't support sha224 or sha384, since the inversion
of the test here would try to use sha224/sha384 support only
on OpenSSL versions that don't support them!

--- a/README
+++ b/README
@@ -354,6 +354,7 @@ THANKS
     Bart Van Assche <bart.vanassche@gmail.com>
     Pablo Carboni <pcarboni@users.sourceforge.net>
     Bill Fenner <fenner@gmail.com>
+    Brian Sipos <bsiposrkf@users.sourceforge.net>
 
   We've probably forgotten people on this list.  Let us know if you've
   contributed code and we've left you out.
